# compilers

./: .gitignore  .gitmodules  .nojekyll  AGENTS.md  README.md  chap1.html  chap2.html  chap3.html  chap4.html  chap5.html  chap6.html  chap7.html  chap8.html  index.html  makefile  pyproject.toml  search.json
.github/ISSUE_TEMPLATE/: grading.yml
.github/workflows/: deploy-book.yml  grade.yml
content/: .gitignore  _quarto.yml  chap1.qmd  chap2.qmd  chap3.qmd  chap4.qmd  chap5.qmd  chap6.qmd  chap7.qmd  chap8.qmd  index.qmd
docs/: eval.md  interface.md
instructors/: grading-rubric.md
instructors/grading-reports/: abelnoval-hulk-fda-2026-07-02.md  abelponce03-hulk-compiler-2026-2026-07-02.md  abg555-hulk-2026-07-02.md  agustin030902-hulk-compiler-2026-07-02.md  amarantomc-the-evil-compiler-2026-07-02.md  amircalabel-hulk-compiler-2026-07-02.md  d4r102004-hulk-compiler-2026-07-02.md  danichina-hulk-compiler-2026-07-02.md  dayancabrera-hulk_compiler-2026-07-02.md  elbrancho04-hulk-compiler-2026-07-02.md  michellviu-2026-07-02.md  (+11 more)
lectures/: 0-intro.ipynb  lectures.py
meta/: index.md
slides/: .gitignore  00-intro.qmd  01-languages.qmd  02-automata.qmd  03-attr-gram.qmd  03-regex.qmd  04-ast.qmd  04-pumping.qmd  05-lexer.qmd  05-regex.qmd  06-automata.qmd  06-cfg.qmd  07-lr-parsing.qmd  07-properties.qmd  08-lexer.qmd  08-ll-parsing.qmd  09-ast.qmd  09-pumping.qmd  10-lr.qmd  10-semantic.qmd  11-attr-gram.qmd  12-intro-semantic.qmd  12-types.qmd  13-codegen.qmd  13-type-check.qmd  14-il.qmd  15-object-code.qmd  _quarto.yml
source/: base.py  tesserax_components.py
(+121 files in other folders)
