[project]
name = "compilers"
version = "0.1.0"
description = "Course materials for Introduction to Compiler Construction"
requires-python = ">=3.12"
dependencies = [
    "pydot",
    "nbformat",
    "nbclient",
    "jupyter",
    "tesserax",
]

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
tesserax = { path = "vendor/tesserax", editable = true }
